feat: adding and getting user cards
