# src/Profile/usercards.dto.ts
@@ -1,0 +1,10 @@
+export interface UserCardDTO {
+  userId: string;
+  creditCardId: string;
+  dueDate: Date;
+}
+
+export interface UserCardDetailDTO {
+  creditCardId: string;
+  dueDate: Date;
+}
